phase2-real-sts/openunison/vault-sts-ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-sts-orchestra
  namespace: openunison
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - VAULT_STS_HOST_PLACEHOLDER
    secretName: ou-tls-certificate
  rules:
  - host: VAULT_STS_HOST_PLACEHOLDER
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openunison-orchestra
            port:
              number: 443
